# gamedex

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml  start.sh
.cursor/rules/: ai-integration.mdc  api-endpoints.mdc  data-models.mdc  database-migrations.mdc  project-structure.mdc  templates-patterns.mdc  testing-patterns.mdc
.github/workflows/: ci.yml
app/: __init__.py  ai_utils.py  auth.py  database.py  main.py  models.py
app/static/: style.css
app/templates/: base.html  edit_game.html  edit_play_log.html  game_detail.html  games.html  index.html  log_play.html  login.html  new_game.html  play_logs.html  recommend.html  recommendations.html  settings.html
migrations/: env.py
migrations/versions/: 0f6c4c8100d9_add_gamerating_model_for_family_member_.py  347f15356ac2_initial.py  4119f87675e8_remove_rating_column_from_games_table.py  add_play_logs_table.py  b9e69a1c3e35_add_setup_time_and_game_elements_fields.py
tests/: __init__.py  conftest.py  test_ai_utils.py  test_api.py  test_auth.py  test_database.py  test_integration.py  test_main.py  test_models.py
