[tool.poetry]
name = "gamedex"
version = "0.1.0"
description = "Board Game Collection Manager with AI-powered recommendations"
authors = ["GameDex Team <team@gamedex.app>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.14"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlmodel = "^0.0.24"
jinja2 = "^3.1.6"
openai = "^1.93.0"
psycopg2-binary = "^2.9.10"
itsdangerous = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.16.2"
sqlalchemy = "^2.0.41"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
isort = "^6.0.1"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
gamedex = "app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.isort]
profile = "black"
skip = ["migrations", ".venv"]
